# houseganpp

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
dataset/: floorplan_dataset_maps_functional_high_res.py
misc/: __init__.py  compatibility_figure.py  utils.py
misc/old/: experiment_replace_feature_volumes.py  experiment_replace_feature_volumes_feats.py  generate_features.py  generate_features_reconstruction.py  generate_floorplans_for_vectorization.py
models/: models_improved.py
scripts/: __init__.py  bayesian_opt.py  evaluation_FID.py  evaluation_GED_v3.py  evaluation_high_res_init.py  optimization_valid_houses_v3.py  optimizing_compatibility.py  optimizing_compatibility_valid_houses.py  viz.py
testing/: evaluation_high_res_max_subgraph.py  evaluation_high_res_random.py  test_experiment_given_masks_gt.py  variation_bbs.py  variation_bbs_with_target_graph.py  variation_bbs_with_target_graph_segments.py  variation_bbs_with_target_graph_segments_suppl.py  variation_bbs_with_target_graph_segments_suppl_conditioned.py  vectorize_OLD.py
