[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "houseganpp"
version = "0.1.0"
description = "House-GAN++: Generative Adversarial Layout Refinement Network"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nelson Nauata", email = "nnauata@sfu.ca"},
]
keywords = ["floorplan", "gan", "generative", "architecture", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tensorboard>=2.5.0",
    "numpy>=1.20.0,<2.0.0",
    "Pillow>=8.2.0",
    "opencv-python>=4.5.0",
    "scikit-image>=0.18.0",
    "matplotlib>=3.4.0",
    "webcolors>=1.11.0",
    "svgwrite>=1.4.0",
    "networkx>=2.5.0",
    "pytz>=2021.1",
    "pythonnet>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
viz = [
    "pygraphviz>=1.7",  # Requires: sudo apt-get install graphviz graphviz-dev
]

[project.urls]
Homepage = "https://ennauata.github.io/houseganpp/page.html"
Repository = "https://github.com/ennauata/houseganpp"
Paper = "https://arxiv.org/abs/2103.02574"
Demo = "http://www.houseganpp.com"

[tool.setuptools]
packages = [
    "houseganpp",
    "houseganpp.dataset",
    "houseganpp.models",
    "houseganpp.misc",
    "houseganpp.scripts",
    "houseganpp.pytorch_fid",
]

[tool.setuptools.package-dir]
"houseganpp" = "."
"houseganpp.dataset" = "dataset"
"houseganpp.models" = "models"
"houseganpp.misc" = "misc"
"houseganpp.scripts" = "scripts"
"houseganpp.pytorch_fid" = "pytorch_fid"

[tool.setuptools.package-data]
misc = ["*.ttf"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | checkpoints
  | exps
  | testing
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
